fix(layout): 🐛 fix page tools center alignment on main page (#1167)
Fix regression from #1159

--- a/resources/skins.citizen.styles/common/content.less
+++ b/resources/skins.citizen.styles/common/content.less
@@ -55,6 +55,10 @@
 	.citizen-body-container {
 		margin-top: var( --space-xl );
 	}
+
+	.page-actions {
+		margin-inline-start: 0;
+	}
 }
 
 // Heading HTML changes
